# bella-hat

./: .gitignore  README.md  asound.conf  pyproject.toml  pyproject_bk.toml  setup.py
bella-ap/: README.md  bella-ap  bella-ap.service  install.sh  uninstall.sh
bella-factory-test/: README.md  bella-factory-test.py  bella-factory-test.service  bella-factory-test.sh  firstboot  install.sh  uninstall.sh
bella-serial-test-daemon/: README.md  bella-serial-test-daemon.py  bella-serial-test-daemon.service  bella-serial-test-daemon.sh  install.py  install.sh  uninstall.py  uninstall.sh
bella_hat/: __init__.py  adc.py  basic.py  bella.py  i2c.py  modules.py  motor.py  music.py  pin.py  pwm.py  utils.py
bl100_hat/: __init__.py  adc.py  filedb.py  i2c.py  modules.py  motor.py  music.py  pwm.py  robot.py  utils.py
certificate/: app.py  configure_audio.sh  install.sh  message.sh  start.sh  stop.sh  test_network.py  ws2812.py
certificate/templates/: index.html  network.html
docs/source/: api.rst  api_basic_class.rst  api_bella.rst  api_modules.rst  api_motor.rst  api_music.rst  api_pin.rst  api_pwm.rst  api_servo.rst  bella-hat_library.rst  conf.py  examples.rst  index.rst  installation.rst
examples/: LSM6DSOX_test.py  adc_test.py  app.py  basic_test.py  dht11_test.py  i2c.py  i2c_test.py  key_test.py  motors_test.py  motors_test2.py  pwm_test.py  rgb_test.py  ultrasonic_test.py
examples/static/: style.css
examples/static/css/: fontawesome.min.css
